--- a/HWCollectionView/ContentHomePageCell.xib
+++ b/HWCollectionView/ContentHomePageCell.xib
@@ -31,6 +31,7 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4q-Lt-45m">
                         <rect key="frame" x="49" y="8" width="291" height="36"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="height" constant="36" id="dF1-yC-Ldb"/>
                         </constraints>
